--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <title></title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <h1>Un super titre</h1>
+
+		<p> Un paragraphe pour dire que c'est la première modification et que je vais le commit comme ça!!!!</p>
+
     </body>
 </html>
