commit 2 un nouveau paragraphe et du style

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 
 		<p> Un paragraphe pour dire que c'est la première modification et que je vais le commit comme ça!!!!</p>
 
+	<h2> Titre 2</h2>
+
+		<p class="deuxP"> Le deuxieme paragraphe, le fond devient vert ;) </p>
+
+
     </body>
 </html>
